# chemfuse

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
docker/: .dockerignore  Dockerfile  Dockerfile.slim  docker-compose.yml
docs/: api-reference.md  cli-reference.md  quickstart.md  r-package.md  sources.md
notebooks/: 01_getting_started.ipynb  01_getting_started.py  02_screening_campaign.ipynb  02_screening_campaign.py  03_cross_database_investigation.ipynb  03_cross_database_investigation.py  04_sar_analysis.ipynb  04_sar_analysis.py  05_chemical_space.ipynb  05_chemical_space.py
paper/: SPEC-ENHANCEMENTS.md  manuscript.md  manuscript_outline.md
paper/figures/: gen_fig1.py  gen_fig3_comparison.py  gen_fig4_performance.py  generate_fig2_workflow.py
r-package/chemfuse/: DESCRIPTION  NAMESPACE
r-package/chemfuse/R/: compute.R  export.R  get.R  screen.R  search.R  xref.R  zzz.R
r-package/chemfuse/man/: cf_admet.Rd  cf_descriptors.Rd  (+7 more)
src/chemfuse/: __init__.py  __main__.py  _version.py  nlq.py  pandas_ext.py
tests/: __init__.py  conftest.py  test_api.py  test_main.py  test_nlq.py  test_pandas_ext.py
tests/analyze/: __init__.py  test_chemspace.py  test_clustering.py  test_diversity.py  test_landscape.py  test_mmp.py  test_report.py  test_rgroup.py  test_sar.py  test_scaffolds.py  test_similarity.py
tests/api/: test_server.py
tests/cli/: __init__.py  test_async_helper.py  test_profile.py  test_profile_extended.py  test_screen.py  test_search.py  test_utils.py  test_web.py  test_xref.py
tests/compute/: __init__.py  test_admet.py  test_descriptors.py  test_druglikeness.py  test_druglikeness_no_rdkit.py  test_fingerprints.py  test_standardization.py  test_synthetic.py
tests/core/: __init__.py  test_batch.py  test_cache.py  test_config.py  test_exceptions.py  test_export.py  test_sdf.py
tests/integration/: __init__.py  test_admet_pipeline.py  test_clustering_pipeline.py  test_enrichment.py  test_multi_source.py  test_workflows.py
tests/mcp/: __init__.py  test_server.py
tests/models/: __init__.py  test_binding.py  test_bioactivity.py  test_collection.py  test_collection_analysis.py  test_compound.py  test_compound_compute.py  test_patent.py  test_target.py
tests/sources/: __init__.py  test_base.py  test_bindingdb.py  test_chembl.py  test_http.py  test_opentargets.py  test_pubchem.py  test_registry.py  test_surechembl.py  test_unichem.py
tests/web/: conftest.py  test_app.py  test_chemspace.py  test_compare.py  test_components.py  test_profile.py  test_screen.py  test_search.py  test_utils.py  test_xref.py
(+82 files in other folders)
